<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>ProjetTechAgent</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.target>18</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
    <dependency>
<groupId>com.example</groupId>
<artifactId>jade</artifactId>
<version>1.0</version>
<scope>system</scope>
<systemPath>C:\Users\ksisa\OneDrive\Bureau\jade.jar</systemPath>

    </dependency>
</dependencies>

<configuration>
        <source>11</source>
        <target>11</target>
        <fork>true</fork>
        <executable>C:\Users\ksisa\OneDrive\Bureau\javafx-sdk-22\bin</executable> <!-- Path to javac from JavaFX SDK -->
        <compilerArgs>
            <arg>--module-path</arg>
            <arg>C:\Users\ksisa\OneDrive\Bureau\javafx-sdk-22\lib</arg> <!-- Path to JavaFX SDK lib folder -->
            <arg>--add-modules</arg>
            <arg>javafx.controls,javafx.fxml</arg> <!-- Add required JavaFX modules -->
        </compilerArgs>
    </configuration>


</project>